infrastructure/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vercentlabs
  namespace: vercentlabs
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: ${INGRESS_IP_NAME}
    networking.gke.io/managed-certificates: vercentlabs-certificate
    networking.gke.io/v1beta1.FrontendConfig: vercentlabs-frontend
    kubernetes.io/ingress.allow-http: "true" # only to serve the HTTPS redirect
spec:
  rules:
    - host: ${APP_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: web, port: { name: http } }
    - host: ${LANDING_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: landing, port: { name: http } }
